# mlocid

./: CHECK_CAQTI_API.md  LICENSE  Makefile  README.md  config.yaml  dune  dune-project  main.ml  mlocid.opam  spaced-repetition.opam  test_api_security.ml  test_backend.ml  test_selenium.py
lib/: api.ml  auth.ml  config.ml  config.mli  database.ml  dune  sm2.ml
static/: app.js  cards.html  cards.js  index.html  login.html  register.html  study.html  study.js  style.css
