(executable
 (public_name mlocid)
 (name main)
 (libraries dream dream-httpaf dream-pure sqlite3 yojson yaml caqti caqti-driver-sqlite3 lwt lwt_ppx logs fmt)
 (preprocess (pps lwt_ppx ppx_yojson_conv)))

(executables
 (names test_backend)
 (public_names test_backend)
 (libraries dream dream-httpaf dream-pure sqlite3 yojson yaml caqti caqti-driver-sqlite3 lwt lwt_ppx logs fmt ounit2)
 (preprocess (pps lwt_ppx ppx_yojson_conv)))
